--- a/ClientApp/src/app/modules/reports/client-outstanding-report/client-outstanding-report.component.html
+++ b/ClientApp/src/app/modules/reports/client-outstanding-report/client-outstanding-report.component.html
@@ -68,19 +68,20 @@
               <table class="table table-striped" id="billDatatable"   datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                   <thead>
                       <tr>
-                        <th scope="col" style="width:10%" class="cursor"></th>
-                        <th scope="col" style="width:10%" class="cursor">Sr No.</th>
-                          <th scope="col" style="width:20%" class="cursor">
+                        <th scope="col" style="width:20%" class="cursor text-right"></th>
+                        <th scope="col" style="width:20%" class="cursor text-right">Sr No.</th>
+                          <th scope="col" style="width:30%" class="cursor text-right">
                             Client Name
                           </th>
-                          <th scope="col" style="width:20%" class="cursor">
+                          <!-- <th scope="col" style="width:20%" class="cursor">
                               Bill + Outward Amt
                           </th>
 
                           <th scope="col" style="width:20%" class="cursor">
                            Payment
-                        </th>
-                        <th scope="col" style="width:20%" class="cursor">
+                        </th> -->
+
+                        <th scope="col" style="width:30%" class="cursor text-right">
                           O/S Amount
                        </th>
 
@@ -89,10 +90,12 @@
                   <tbody>
                       <tr *ngFor="let outstanding of lstOutstandingReport ;let i = index">
                         <td></td>
-                        <td data-title="Sr No">{{i+1}}</td>
-                          <td data-title="Client Name">{{outstanding.clientName }}</td>
-                          <td data-title="Bill + Outward Amt" class="text-right" >{{outstanding.serviceAmount}}</td>
+                        <td data-title="Sr No" class="text-right">{{i+1}}</td>
+                           <td data-title="Client Name" class="text-right">{{outstanding.clientName }}</td>
+                         <!-- <td data-title="Bill + Outward Amt" class="text-right" >{{outstanding.serviceAmount}}</td>
+
                           <td data-title="Payment" class="text-right" >{{outstanding.advanceAmount}}</td>
+                         -->
                          <td data-title="O/S Amount" class="text-right"  [ngClass]="{'text-danger': outstanding.outstandingAmount >0}">
                             {{outstanding.outstandingAmount}}</td>
                       </tr>
@@ -105,8 +108,10 @@
                       <td class="text-right hide-td-on-device"></td>
                       <td class="text-right hide-td-on-device"></td>
                       <td class="text-right font-weight-bold"> <span>Total:</span></td>
+<!--
                       <td data-title="Service Total" class="text-right font-weight-bold">{{servicetotal}}</td>
-                      <td data-title="Advance Total" class="text-right font-weight-bold">{{advancetotal}}</td>
+                      <td data-title="Advance Total" class="text-right font-weight-bold">{{advancetotal}}</td> -->
+
                       <td data-title="O/S Total" class="text-right font-weight-bold" [ngClass]="{'text-danger': outStandingtotal >0}">{{outStandingtotal}}</td>
 
                   </tr>
