--- a/ClientApp/src/app/shared/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/shared/sidebar/sidebar.component.html
@@ -68,7 +68,7 @@
                     Inward Accessories
                   </a>
                 </li>
-                
+
               </ul>
             </div>
           </li>
@@ -97,7 +97,7 @@
           <li class="nav-item">
             <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="reports/inward-report"
                routerLinkActive="active"><i class="fas fa-circle"></i> Inward Reports</a>
-          </li> 
+          </li>
           <li class="nav-item">
             <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="reports/client-outstanding-report"
                routerLinkActive="active"><i class="fas fa-circle"></i> Client O/S Reports</a>
@@ -142,7 +142,12 @@
       </div>
     </li>
 
-
+    <li class="nav-item" (click)="deviceSidemenuCollapse()" [ngClass]="{ 'active': users.isActive }">
+      <a class="nav-link">
+        <i class="fas fa-sms"></i>
+        <span class="menu-title">SMS Count : {{sharedService.smsCount()}}</span>
+      </a>
+    </li>
 
   </ul>
   <div class="fold-menu-on-desktop">
