--- a/ClientApp/src/assets/scss/components/_buttons.scss
+++ b/ClientApp/src/assets/scss/components/_buttons.scss
@@ -140,41 +140,41 @@ footer {
 .switchToggle {
     position: relative;
     input[type=checkbox]{
-        height: 0; 
-        width: 0; 
-        visibility: hidden; 
-        position: absolute; 
+        height: 0;
+        width: 0;
+        visibility: hidden;
+        position: absolute;
     }
-  
+
     label {
-        cursor: pointer; 
-        text-indent: -9999px; 
+        cursor: pointer;
+        text-indent: -9999px;
         width: 100px;
         max-width: 85px;
         border:1px solid $dark;
-        display: block; 
-        border-radius: 85px; 
-        position: relative; 
+        display: block;
+        border-radius: 85px;
+        position: relative;
         margin-bottom: 0;
             font-size: 0.875rem;
         padding: 0.2125rem 0.4375rem;
         &::after {
             content: '';
-             position: absolute; 
+             position: absolute;
              top: 6px;
              left: 8px;
-             width: 20px; 
-             height: 20px; 
+             width: 20px;
+             height: 20px;
              background-color: $grey;
-             border-radius: 50%; 
-             transition: 0.3s; 
+             border-radius: 50%;
+             transition: 0.3s;
             }
     }
     // input:checked + label, input:checked + input + label  {background: #3e98d3; }
     input + label:before,  input + input + label:before {content: 'Family'; position: absolute; top: 3px; left: 35px; width: 45px; transition: 0.3s; text-indent: 0; color:  $dark; }
     input:checked + label:before, input:checked + input + label:before {content: 'Family'; position: absolute; top: 3px; left: 10px; width: 45px;   transition: 0.3s; text-indent: 0; color:  $dark; }
     input:checked + label:after,  input:checked + input + label:after {left: calc(100% - 6px); transform: translateX(-100%);  background-color: $green; }
-    label:active:after {width: 60px; } 
+    label:active:after {width: 60px; }
 }
 
 /*swicth button style end*/
@@ -232,6 +232,10 @@ footer {
     }
     &.buttons-select-none {
         @extend .buttons-select-all
+    }
+
+  &.buttons-send-to-ca {
+    @extend .buttons-select-all
     }
 }
 
