--- a/ClientApp/src/app/modules/inward-material/material-type/material-type.component.html
+++ b/ClientApp/src/app/modules/inward-material/material-type/material-type.component.html
@@ -14,19 +14,16 @@
                 <table class="table row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                     <thead>
                         <tr>
-                            <th scope="col" style="width:88%" class="cursor">
-                                <div class="d-flex align-items-center"><span>Model No</span> <span>
-                                        &#9660;</span></div>
+                            <th scope="col" style="width:30%" class="cursor">
+                                <div class="d-flex align-items-center"><span>Model No</span></div>
                             </th>
-                            <th scope="col" style="width:88%" class="cursor">
-                                <div class="d-flex align-items-center"><span>Material Type</span> <span>
-                                        &#9660;</span></div>
+                            <th scope="col" style="width:30%" class="cursor">
+                                <div class="d-flex align-items-center"><span>Material Type</span> </div>
                             </th>
-                            <th scope="col" style="width:88%" class="cursor">
-                                <div class="d-flex align-items-center"><span>Company Name</span> <span>
-                                        &#9660;</span></div>
+                            <th scope="col" style="width:30%" class="cursor">
+                                <div class="d-flex align-items-center"><span>Company Name</span> </div>
                             </th>
-                            <th scope="col" style="width:12%" class="text-center actions-td cursor">
+                            <th scope="col" style="width:10%" class="text-center actions-td cursor">
                                 <div class="d-flex align-items-center justify-content-center"><span>Actions</span>
                                     </div>
                             </th>
