--- a/ClientApp/src/app/modules/reports/bill-report/bill-report.component.html
+++ b/ClientApp/src/app/modules/reports/bill-report/bill-report.component.html
@@ -73,7 +73,7 @@
                 <table class="table table-striped" id="billDatatable"   datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                     <thead>
                         <tr>
-                          <th scope="col" style="width:2%" class="cursor"></th>
+                          <th scope="col" style="width:4%" class="cursor">&nbsp;</th>
                           <th scope="col" style="width:8%" class="cursor">Sr No.</th>
                             <th scope="col" style="width:10%" class="cursor">
                               Bill Date
@@ -84,7 +84,7 @@
                             <th scope="col" style="width:10%" class="cursor">
                                Job #
                             </th>
-                            <th scope="col" style="width:15%" class="cursor">
+                            <th scope="col" style="width:14%" class="cursor">
                              Client Name
                           </th>
                             <th scope="col" style="width:10%" class="text-right">
@@ -96,7 +96,7 @@
                             <th scope="col" style="width:10%" class="text-right">
                                 <div class="mr-2"> Paid ₹</div>
                             </th>
-                            <th scope="col" style="width:15%" class="text-right">
+                            <th scope="col" style="width:14%" class="text-right">
                                 <div class="mr-2"> O/S ₹</div>
                             </th>
                         </tr>
