--- a/ClientApp/src/app/modules/reports/inward-report/inward-report.component.html
+++ b/ClientApp/src/app/modules/reports/inward-report/inward-report.component.html
@@ -69,7 +69,7 @@
                   <thead>
                       <tr>
                         <th scope="col" style="width:4%" class="cursor"></th>
-                        <th scope="col" style="width:8%" class="cursor">Sr No.</th>
+                        <th scope="col" style="width:6%" class="cursor">Sr No.</th>
                           <th scope="col" style="width:10%" class="cursor">
                             Job No.
                           </th>
@@ -77,22 +77,22 @@
                               Inward Date
                           </th>
 
-                          <th scope="col" style="width:10%" class="cursor">
+                          <th scope="col" style="width:12%" class="cursor">
                            Client Name
                         </th>
-                        <th scope="col" style="width:10%" class="cursor">
+                        <th scope="col" style="width:11%" class="cursor">
                           Material Name
                        </th>
-                          <th scope="col" style="width:10%" class="text-right">
-                           <div class="mr-2"> Estimated Amt. ₹</div>
+                          <th scope="col" style="width:11%" class="text-right">
+                           <div class="mr-2"> Estimated ₹</div>
                           </th>
                           <th scope="col" style="width:12%" class="text-right">
-                              <div class="mr-2"> Advance Amount ₹</div>
+                              <div class="mr-2"> Advance ₹</div>
                           </th>
                           <th scope="col" style="width:12%" class="text-right">
                               <div class="mr-2"> Outward/Bill Status</div>
                           </th>
-                          <th scope="col" style="width:12%" class="text-right">
+                          <th scope="col" style="width:10%" class="text-right">
                               <div class="mr-2">Repaired</div>
                           </th>
                       </tr>
