--- a/ClientApp/src/app/modules/inward-material/outward-list/outward-list.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward-list/outward-list.component.html
@@ -13,12 +13,12 @@
         <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border hover">
           <thead>
             <tr>
-              <th style="width: 10%;">Outward No</th>
+              <th style="width: 15%;">Outward No</th>
               <th style="width: 15%;">Outward Date</th>
               <th style="width: 20%;">Job Number</th>
               <th style="width: 20%;">Customer Name</th>
-              <th style="width: 15%;">Service Amt</th>
-              <th style="width: 20%;" class="text-center actions-td cursor">Action</th>
+              <th style="width: 15%;" class="text-right"><span class="d-inline-block mr-2">Service ₹</span> </th>
+              <th style="width: 15%;" class="text-center actions-td cursor">Action</th>
             </tr>
           </thead>
           <tbody *ngIf="outwards?.length != 0">
@@ -27,7 +27,7 @@
               <td data-title="Outward Date">{{ _outward.outwardDate | date:'dd/MM/yyyy'}}</td>
               <td data-title="Job Number">{{ _outward.jobNumbers }}</td>
               <td data-title="Customer Name">{{ _outward.companyName }}</td>
-              <td data-title="Service Amount">{{ _outward.serviceAmount }} /-</td>
+              <td data-title="Service Amount" class="text-right">{{ _outward.serviceAmount }} /-</td>
               <td data-title="Actions" class="action text-center actions-td">
                 <div class="d-flex justify-content-center">
                   <a href="javascript:void(0)">
