--- a/ClientApp/src/app/modules/reports/client-outstanding-report/client-outstanding-report.component.html
+++ b/ClientApp/src/app/modules/reports/client-outstanding-report/client-outstanding-report.component.html
@@ -68,9 +68,9 @@
               <table class="table table-striped" id="billDatatable"   datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                   <thead>
                       <tr>
-                        <th scope="col" style="width:20%" class="cursor text-right"></th>
-                        <th scope="col" style="width:20%" class="cursor text-right">Sr No.</th>
-                          <th scope="col" style="width:30%" class="cursor text-right">
+                        <th scope="col" style="width:10%" class="cursor"></th>
+                        <th scope="col" style="width:10%" class="cursor">Sr No.</th>
+                          <th scope="col" style="width:40%" class="cursor">
                             Client Name
                           </th>
                           <!-- <th scope="col" style="width:20%" class="cursor">
@@ -81,8 +81,8 @@
                            Payment
                         </th> -->
 
-                        <th scope="col" style="width:30%" class="cursor text-right">
-                          O/S Amount
+                        <th scope="col" style="width:40%" class="cursor text-right">
+                        <span class="d-inline-block mr-2">O/S Amount</span>  
                        </th>
 
                       </tr>
@@ -90,8 +90,8 @@
                   <tbody>
                       <tr *ngFor="let outstanding of lstOutstandingReport ;let i = index">
                         <td></td>
-                        <td data-title="Sr No" class="text-right">{{i+1}}</td>
-                           <td data-title="Client Name" class="text-right">{{outstanding.clientName }}</td>
+                        <td data-title="Sr No">{{i+1}}</td>
+                           <td data-title="Client Name">{{outstanding.clientName }}</td>
                          <!-- <td data-title="Bill + Outward Amt" class="text-right" >{{outstanding.serviceAmount}}</td>
 
                           <td data-title="Payment" class="text-right" >{{outstanding.advanceAmount}}</td>
