--- a/ClientApp/src/app/modules/reports/client-outstanding-report/client-outstanding-report.component.html
+++ b/ClientApp/src/app/modules/reports/client-outstanding-report/client-outstanding-report.component.html
@@ -82,7 +82,7 @@
                         </th> -->
 
                         <th scope="col" style="width:40%" class="cursor text-right">
-                        <span class="d-inline-block mr-2">O/S Amount</span>  
+                        <span class="d-inline-block mr-2">O/S ₹</span>  
                        </th>
 
                       </tr>
