--- a/ClientApp/src/app/modules/payment/lumpsum-print/lumpsum-print.component.html
+++ b/ClientApp/src/app/modules/payment/lumpsum-print/lumpsum-print.component.html
@@ -49,7 +49,9 @@
             margin: 0 0 10px 0;
             text-align: left;">Computers</p>
           </td>
-          <td style="padding:0; background: transparent; width: 50%; text-align: right;"></td>
+          <td style="padding:0; background: transparent; width: 50%; text-align: right;">
+            <h5 class="float-right"><strong>GST No. :</strong> 27CBWPS9849E1ZK</h5>
+          </td>
         </tr>
       </table>
     </div>
@@ -62,6 +64,8 @@
         Flat No 4, B Wing, Viththal Park, Samant Vadi, Near Ashok Stambh, Kashiba Medical Back side, Gangapur Road, Nashik - 422002.
         <strong>Contact</strong>: 9867545678, 9867545678
       </p>
+      <p  style="margin:0; font-size: 14px;"><strong>Please Note:</strong> Composition Taxable Person, Not Eligible to Collect Tax on Supplies</p>
+
     </div>
   </div>
   <main>
@@ -126,7 +130,7 @@
                 <span style=" color: #000;
                 text-align: right;
                 width: 160px;
-                margin-right: 10px;
+                margin-right: 0px;
                 display: inline-block;
                 font-weight: 600;">Receiver Signature</span>
               </div>
