--- a/ClientApp/src/app/modules/reports/account-statement/account-statement.component.scss
+++ b/ClientApp/src/app/modules/reports/account-statement/account-statement.component.scss
@@ -6,13 +6,22 @@
         flex-basis: 40%;
         margin-left: 5px;
     }
+    .card-body {
+        padding-left: 5px !important;
+        padding-right: 5px !important;
+
+        &.first-card-body {
+            border-bottom: 2px solid #f2f3f8;
+        }
+    }
     .card-footer {
         background-color: #fff;
         text-align: right;
         font-size: .895rem;
+        height: 80px;
         div {
-            border-bottom: 1px solid #ccc;
-            padding-bottom: 7px;
+            //border-bottom: 1px solid #ccc;
+            padding-bottom: 5px;
         }
         span {
             font-size: .895rem;
@@ -38,5 +47,17 @@
         font-size: .875rem;
     font-weight: 600;
     color: #000;
+    }
+}
+
+
+.table {
+	border: 0px solid #dee2e6;
+ 
+	tr th, tr td {
+		border: 0px solid #dee2e6;
+    }
+    tr th {
+        border-top: 0.0625rem solid #d7d7d7 !important;
     }
 }
