--- a/ClientApp/src/app/modules/master/customer/add-edit-customer/add-edit-customer.component.html
+++ b/ClientApp/src/app/modules/master/customer/add-edit-customer/add-edit-customer.component.html
@@ -87,7 +87,7 @@
 
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="form-group has-float-label">
-                  <input class="form-control" autocomplete="new" type="number" id="mobileNo" placeholder="Mobile Number 1"
+                  <input class="form-control" autocomplete="new"  id="mobileNo" placeholder="Mobile Number 1"
                          formControlName="mobileNo" [(ngModel)]="customer.ownerMobileNo">
                   <label for="mobileNo"> Mobile Number 1</label>
                   <div *ngIf="addClientForm.controls['mobileNo'].invalid && (addClientForm.controls['mobileNo'].dirty || addClientForm.controls['mobileNo'].touched)"
@@ -101,7 +101,7 @@
 
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="form-group has-float-label">
-                  <input class="form-control" autocomplete="new" type="number" autocomplete="new" id="mobileNoFirst" placeholder="Mobile Number 2"
+                  <input class="form-control" autocomplete="new"   id="mobileNoFirst" placeholder="Mobile Number 2"
                          formControlName="mobileNoFirst1" [(ngModel)]="customer.mobileNoFirst">
                   <label for="mobileNoFirst"> Mobile Number 2</label>
 
@@ -110,7 +110,7 @@
 
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="form-group has-float-label">
-                  <input class="form-control" autocomplete="new" type="number" id="telNoFirst" placeholder="Telephone Number 1"
+                  <input class="form-control" autocomplete="new"  id="telNoFirst" placeholder="Telephone Number 1"
                          formControlName="telNoFirst1" [(ngModel)]="customer.telNoFirst">
                   <label for="telNoFirst"> Telephone Number 1 </label>
 
